--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -11,6 +11,7 @@
 }
 
 .filters {
+    
     background-color: blue;
     color: white;
     padding: 20px;
@@ -26,5 +27,37 @@
 }
 
 .title {
-    font-size: 30px;
+    font-size: 22px;
+    color: greenyellow;
+}
+
+.products {
+    width: 30%;
+    margin: 10px;
+}
+
+.cartItem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 20px;
+    margin-bottom: 20px;
+}
+
+.cartItemImage {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
+.cartItemDetail {
+    display: flex;
+    flex: 1;
+    padding: 0 20px;
+    flex-direction: column;
+}
+
+.summary {
+    width: 30%;
 }
