--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,63 +1,87 @@
 .home {
-    display: flex;
+  display: flex;
 }
 
 .productContainer {
-    display: flex;
-    width: 78%;
-    padding: 20px;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  width: 78%;
+  padding: 20px;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .filters {
-    
-    background-color: blue;
-    color: white;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    width: 20%;
-    margin: 10px;
-    height: 86vh;
+  background-color: blue;
+  color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  margin: 10px;
+  height: 86vh;
 }
 
 .filters > span {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .title {
-    font-size: 22px;
-    color: greenyellow;
+  font-size: 22px;
+  color: greenyellow;
 }
 
 .products {
-    width: 30%;
-    margin: 10px;
+  width: 30%;
+  margin: 10px;
 }
 
 .cartItem {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 20px;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 20px;
+  margin-bottom: 20px;
 }
 
 .cartItemImage {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
 }
 
 .cartItemDetail {
-    display: flex;
-    flex: 1;
-    padding: 0 20px;
-    flex-direction: column;
+  display: flex;
+  flex: 1;
+  padding: 0 20px;
+  flex-direction: column;
 }
 
 .summary {
-    width: 30%;
+  width: 30%;
+}
+
+@media (max-width: 771px) {
+  .filters {
+    width: 40%;
+    padding: 10%;
+    margin: 5px;
+  }
+
+  .filters > span {
+    font-size: 10px;
+  }
+
+  .title {
+    font-size: 18px !important;
+  }
+
+  .productContainer {
+    width: 58%;
+    padding: 0;
+  }
+
+  .products {
+    width: 100%;
+  }
 }
