--- a/src/App.css
+++ b/src/App.css
@@ -67,14 +67,28 @@ a {
 }
 
 .confirmation-message {
-  background-color: #f0f0f0;
-  padding: 10px;
-  border: 1px solid #ccc;
-  margin: 20px;
+  background-color: #2d09e0;
+  color: #fcef05;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: x-large;
+  font-weight: 700;
+  padding: 20px;
+  border: 2px solid #1313f4;
+  border-radius: 5px;
+  margin: 10% 20% 0 20%;
   text-align: center;
 }
 
+
 @media (max-width: 771px) {
+  .navbar-fixed-top {
+    position: static !important;
+  }
+
+  .title {
+    font-size: 18px !important;
+  }
+  
   .filters {
     width: 40%;
     padding: 10%;
@@ -83,10 +97,6 @@ a {
 
   .filters > span {
     font-size: 10px;
-  }
-
-  .title {
-    font-size: 18px !important;
   }
 
   .productContainer {
